--- a/w6d5/react_widget/package.json
+++ b/w6d5/react_widget/package.json
@@ -16,6 +16,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "react": "^16.4.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.4.0",
     "webpack": "^4.9.0"
   },
